--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,1 @@
-cacheFolder: .yarn/cache
-
-enableGlobalCache: true
-
-nmHoistingLimits: workspaces
-
-nodeLinker: pnp
-
-npmAuthToken: "${NPM_AUTH_TOKEN}"
-
-npmRegistryServer: "https://registry.yarnpkg.com"
+nodeLinker: node-modules
