Revert "Update .yarnrc.yml"

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,11 @@
-nodeLinker: node-modules
+cacheFolder: .yarn/cache
+
+enableGlobalCache: true
+
+nmHoistingLimits: workspaces
+
+nodeLinker: pnp
+
+npmAuthToken: "${NPM_AUTH_TOKEN}"
+
+npmRegistryServer: "https://registry.yarnpkg.com"
